# containers-training

./: .gitignore  README.md  containers_overview.docx
container-from-scratch/: README.MD
container-from-scratch/alpine/: burner_program.sh
container-from-scratch/bash/: container_manager.sh  container_runner.sh
container-from-scratch/cpp/container_example/: CMakeLists.txt  main.cpp
docker-cgroup/: README.MD  container_manager.sh  container_runner.sh
